# CTC_decoder

./: CMakeLists.txt  README.md  ctc_decode_C.cpp  ctc_decode_C.h  ctc_decoder.cpp  ctc_decoder.h  ctc_utils.h  main.cpp
